--- a/docs/slides/talk4_PointClustering.Rmd
+++ b/docs/slides/talk4_PointClustering.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Концептуальные модели картографической генерализации"
-subtitle: "Картографические базы данных. Лекция №3"
+title: "Кластеризация точечных объектов"
+subtitle: "Картографические базы данных. Лекция №4"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 output:
@@ -14,291 +14,11 @@ output:
       ratio: "16:9"
 ---
 
-## Генерализация множеств точечных объектов
-
-Картографические базы данных. Лекция 3
-
-**Тимофей Самсонов**
-[tsamsonov@geogr.msu.ru](tsamsonov@geogr.msu.ru)
-
-
-
-## Генерализация множеств точечных объектов
-
-**Методы генерализации**
-
-1. Отбор
-1. Кластеризация
-1. Регионизация
-
-**Аспекты**
-
-1. Вспомогательные геометрические структуры
-1. Параметризация алгоритмов
-1. Оценка результатов
-
-## Триангуляция Делоне и диаграмма Вороного
-
-**Триангуляция** (на плоскости) — это разбиение фигуры на треугольники.
-
-<div style="display: inline-block; width: 65%; vertical-align: top;">
-
-- Треугольники покрывают всю фигуру без «дыр», при этом они либо не пересекаются, либо касаются в точке или вершине.
-
-- Под триангуляцией множества точек понимается *триангуляция их выпуклой оболочки*, в которой сами точки являются вершинами треугольников.
-
-- В *триангуляции Делоне* окружность, описанная вокруг каждого треугольника, не содержит других точек этого множества
-
-</div>
-
-<div style="display: inline-block; width: 30%; vertical-align: top; margin-left: 2%">
-  ![](tin.svg){width=200px}
-</div>
-
-**Delaunay, Boris** (1934). *Sur la sphère vide*. Bulletin de l'Académie des Sciences de l'URSS, Classe des sciences mathématiques et naturelles. 6: 793–800.
-
-## Триангуляция Делоне и диаграмма Вороного
-
-**Диаграмма Вороного** конечного множества точек $S$ на плоскости представляет такое разбиение плоскости, при котором каждая область этого разбиения образует множество точек, более близких к одному из элементов множества $S$, чем к любому другому элементу множества.
-
-<div style="display: inline-block; width: 55%; vertical-align: top;">
-
-- Другие названия диаграммы — *полигоны Тиссена*, *разбиение Дирихле*
-
-- Диаграмма Вороного строится на основе серединных перпендикуляров к сторонам треугольников
-
-- Диаграмма Вороного множества точек взаимно однозначна триангуляции Делоне множества точек
-
-</div>
-
-<div style="display: inline-block; width: 40%; vertical-align: top; margin-left: 2%">
-  <img src="voronoi.svg" width="300">
-  <!-- ![](voronoi.svg){width=200px} -->
-</div>
-
-**Voronoi, Georgy** (1908). *Nouvelles applications des paramètres continus à la théorie des formes quadratiques*. Journal für die Reine und Angewandte Mathematik. 133 (133): 97–178. doi:10.1515/crll.1908.133.97.
-
-
-## Диаграмма Вороного
-
-Диаграмма Вороного представляет из себя способ моделирования конкурентных зон
-
-<img src="voronoi.gif" width="400">
-<!-- ![https://en.wikipedia.org/wiki/Voronoi_diagram](voronoi.gif){width=450px} -->
-
-
-## Диаграмма Вороного
-
-Для вычисления диаграммы могут быть использованы различные метрики
-
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  **Евклидово расстояние**
-
-  $d_{12} = \sqrt{(x_1-x_2)^2 + (y_1 - y_2)^2}$
-  
-  <img src="voronoi_std.svg" width="300">
-  
-  <!-- ![](voronoi_std.svg) -->
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  **Манхэттенское расстояние**
-
-  $d_{12} = |x_1-x_2| + |y_1 - y_2|$
-  
-  <img src="voronoi_mnh.svg" width="300">
-  <!-- ![](voronoi_mnh.svg) -->
-</div>
-
-## Отбор точек
-
-**Алгоритмы отбора:**
-
-1. Разделения населенных пунктов (*settlement-spacing*)
-
-1. Растущей окружности (*circle-growth*)
-
-1. Взвешенной эффективной площади (*effective area*)
-
-**Все алгоритмы** используют весовые коэффициенты для оценки важности точке. В качестве аргумента весовой функции могут быть использованы:
-
-- значение показателя в точке
-- статус (ранг) точки
-- расстояние до ближайшей точки
-- эффективная площадь точки (ячейка Вороного)
-
-## Алгоритм Settlement-spacing
-
-Вокруг каждой точки строится окружность радиуса $R_i = C/W_i$, где $W_i$ — вес точки, а $С$ — константа. Точки сортируются в порядке уменьшения $W_i$.
-
-1. Выбирается первая точка. Добавляется в результат.
-
-1. Выбирается следующая точка. Если она содержит в окружности ранее добавленную точку, она исключается. Если нет, то добавляется в результат.
-
-2. Шаг 2 повторяется, пока не будет достигнут требуемый процент отбора точек, либо не исчерпается множество точек.
-
-![](stl-spacing.png)
-
-**Langran C. E. and Poiker T. K.** *Integration of name selection and name placement* // Proceedings of II International Symposium on Spatial Data Handling, 1986, pp. 50–64.
-
-
-
-## Алгоритм Circle-growth
-
-Радиус окружности $R = C \times W_i$ прямо пропорционален весу точки $W_i$.
-
-1. Начальное значение $С$ выбирается таким образом, чтобы окружность наиболее важной точки не накрывала ни одну соседнюю точку.
-
-1. Значение $С$ увеличивается, при этом удаляются те точки, окружности которых оказались целиком внутри окружности точки более высокого ранга.
-
-1. Процедура продолжается до тех пор пока, не будет достигнут требуемый процент удаляемых точек.
-
-![](circ-growth.png)
-
-**van Kreveld, M., van Oosterom, R., and Snoeyink, J.** *Efficient settlement selection for interactive display*, in Proceedings of AutoCarto 12, Bethesda, MD, 1995, pp. 287–296.
-
-
-
-## Алгоритм эффективной площади
-
-1. Построить оболочку точек (convex hull, $\alpha$-shape)
-
-2. Построить диаграмму Вороного точек в пределах оболочки.
-
-3. Вычислить веса каждой точки обратно пропорционально площади ее ячейки Вороного $W_i = A_i^{-1}$. Пометить все точки как активные.
-
-4. Удалить активную точку с наименьшим весом.
-
-5. Перестроить локально диаграмму Вороного для соседей точки первого порядка. Деактивировать соседей (запретить их удаление).
-
-6. Повторять шаги 4-5 для оставшихся точек, пока не будут деактивированы все точки или пока не будет достигнут требуемый процент отбора.
-
-7. Если не достигнут требуемый процент отбора точек, активировать все точки и перейти к шагу 4. В противном случае завершить обработку
-
-**Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002.
-
-## Алгоритм эффективной площади
-
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  **До:**
-
-  ![](effa_source.png)
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  **После:**
-
-  ![](effa_result.png)
-</div>
-
-**Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002.
-
-
-
-## Алгоритм эффективной площади
-
-**Локальное перестроение диаграммы Вороного:**
-
-![](effa_recalc.png)
-
-- выбрать соседей первого и второго порядка, построить для них диаграмму Вороного
-
-- выбрать полигоны Вороного соседей первого порядка и заменить ими полигоны Вороного в исходной диаграмме
-
-**Деактивация** соседей первого порядка позволяет избежать прореживания множества точек в местах их значительного скопления
-
-## Алгоритм взвешенной эффективной площади
-
-Вес точки масштабируется пропорционально ее значимости, а не только эффективной площади: $W_i = С_i \times A_i^{-1}$, где параметр $С_i$ можно представить как средневзвешенную сумму баллов за факторы:
-
-$$
-С_i = \frac{\sum w_j f_{ij}}{\sum w_j}
-$$
-
-где $w_j$ – вес $j$-го фактора, $f_{ij}$ — значение $j$-го фактора в $i$-й точке.
-
-**Yan, H. W and Li, Z. L.**, *A Voronoi-based algorithm for point cluster generalization* // Proceedings of 11th International Conference on Geometry and Graphics, August 2004, Guangzhou, 2004.
-
-**Samsonov T., Krivosheina A.**  *Joint generalization of city points and road network for small-scale mapping* // Proceedings of Seventh International Conference on Geographic Information Science GIScience, September 18-21, 2012. — Columbus, Ohio, 2012. — P. 1–7.
-
-
-## Районирование
-
-Можно выполнить районирование территории по густоте размещения и для каждого района устанавливать свои допуски и критерии генерализации
-
-![](sel_regions.png){width=700px}
-
-**Самсонов Т. Е., Кривошеина А. М.** *Автоматизация отбора населенных пунктов с учетом пространственной неравномерности их распределения для целей мелкомасштабного картографирования* // Известия высших учебных заведений. Геодезия и аэрофотосъемка. — 2015. — № 1. — С. 74–82.
-
-
-
-## Районирование
-
-Можно выполнить районирование территории по густоте размещения и для каждого района устанавливать свои допуски и критерии генерализации
-
-![](sel_regions2.png){width=700px}
-
-**Самсонов Т. Е., Кривошеина А. М.** *Автоматизация отбора населенных пунктов с учетом пространственной неравномерности их распределения для целей мелкомасштабного картографирования* // Известия высших учебных заведений. Геодезия и аэрофотосъемка. — 2015. — № 1. — С. 74–82.
-
-## Графическая оценка результатов
-
-**До генерализации:**
-
-![](graph_est_src.png)
-
-1 у.е. — пунсон населенного пункта наименьшего класса
-
-
-## Графическая оценка результатов
-
-**После генерализации:**
-
-![](graph_est_dest.png)
-
-1 у.е. — пунсон населенного пункта наименьшего класса
-
-
-## Численная оценка результатов
-
-**Закон квадратного корня:**  *количество объектов уменьшается пропорционально квадратному корню отношения исходного и результирующего масштабов* (Topfer, Pillewizer, 1966). В более общем виде закон можно сформулировать следующим образом:
-
-$$
-N_T = N_S \sqrt {\left(\frac{S_S}{S_T}\right)^x}
-$$
-
-где $N_T$  количество объектов в целевом масштабе, $N_S$  количество объектов в исходном масштабе, $S_T$  целевой масштаб, $S_S$  исходный масштаб. Параметр $x$ определяет степень отбора при генерализации и принимает следующие характерные значения:
-
-- 0 — нет отбора
-- (0, 4) — *увеличение* густоты
-- 4 — *сохранение* густоты
-- \> 4 — *уменьшение* густоты
-
-**Topfer, F. and Pillewizer, W.** (1966) *The Principles of Selection*. The Cartographic Journal, 3, 10-16. http://dx.doi.org/10.1179/caj.1966.3.1.10
-
-## Численная оценка результатов
-
-Оценка по закону Топфера показывает, что, как правило, при уменьшении масштаба наблюдается выравнивание плотности объектов по различным районам, а также общее уплотнение объектов:
-
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-
-Класс | Значение параметра $x$
-|--
-1  | 4,2
-2  | 3,0
-3  | 2,0
-4  | 1,2
-Всего  | 3,8
-
-</div>
-
-<div style="display: inline-block; width: 50%; vertical-align: top; margin-left: 2%">
-
-![](sel_regions2.png){width=500px}
-
-</div>
-
-
-## Кластеризация
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
+
+---
 
 ## Постановка задачи кластеризации
 
@@ -322,6 +42,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Кластеризация
 
@@ -340,6 +61,7 @@ $$
 3. Неизвестное количество кластеров
 4. Зависимость результата от выбранной метрики
 
+---
 
 ## Алгоритмы кластеризации
 
@@ -353,6 +75,7 @@ $$
 
 1. Плотностная кластеризация (DBSCAN/OPTICS)
 
+---
 
 ## Метод К средних
 
@@ -368,6 +91,7 @@ $$
 
 **MacQueen J.** (1967). *Some methods for classification and analysis of multivariate observations.* In Proc. 5th Berkeley Symp. on Math. Statistics and Probability, pages 281—297.
 
+---
 
 ## Метод К средних
 Пример с четырьмя кластерами:
@@ -377,6 +101,7 @@ $$
 
 [http://shabal.in/visuals/kmeans/](http://shabal.in/visuals/kmeans/)
 
+---
 
 ## Метод К средних
 
@@ -390,6 +115,7 @@ $$
 
 **Однако**: не гарантируется достижение глобального минимума суммарного квадратичного отклонения $V$, а только одного из локальных минимумов.
 
+---
 
 ## Метод К средних
 
@@ -402,6 +128,7 @@ $$
 
 [https://moderndata.plot.ly/voronoi-diagrams-in-plotly-and-r/](https://moderndata.plot.ly/voronoi-diagrams-in-plotly-and-r/)
 
+---
 
 ## Метод К средних
 
@@ -417,6 +144,7 @@ $$
 
 [E.M. Mirkes, K-means and K-medoids applet. University of Leicester, 2011.](http://www.math.le.ac.uk/people/ag153/homepage/KmeansKmedoids/Kmeans_Kmedoids.html)
 
+---
 
 ## Метод К средних
 
@@ -426,6 +154,7 @@ $$
 
 ![](kmeans-irr.png){width=500px}
 
+---
 
 ## Метод К средних
 
@@ -439,6 +168,7 @@ $$
 
 4. Метод может выявлять только заданное количество кластеров, но не их естественное число.
 
+---
 
 ## Метод ISODATA
 
@@ -448,6 +178,7 @@ $$
 
 **Ball, Geoffrey H., Hall, David J.** (1965) *Isodata: a method of data analysis and pattern classification* Stanford Research Institute, Menlo Park,United States. Office of Naval Research. Information Sciences Branch
 
+---
 
 ## Метод ISODATA
 
@@ -461,6 +192,8 @@ $$
 
 (5). Для каждого кластера вычислить значения выборочного среднего $\mu_x, \mu_y$ и стандартного отклонения $\sigma_x$ и $\sigma_y$ координат по осям $X$ и $Y$.
 
+---
+
 ## Метод ISODATA
 
 (6). Разбить пополам значением $\mu_x$ или $\mu_y$ все кластеры, в которых $\sigma_x > \sigma_x^{max}$ или $\sigma_y > \sigma_y^{max}$. Если в кластере $\sigma$ превышает допуск по обоим направлениям, он разбивается по направлению, в котором $\sigma$ больше.
@@ -469,12 +202,15 @@ $$
 
 (8). Повторять шаги 3-5, пока во всех кластерах значения $\sigma_x$ и $\sigma_y$ на станут меньше соответствующих значений $\sigma_x^{max}$ и $\sigma_y^{max}$ или когда не будет достигнуто требуемое количество кластеров $K$.
 
+---
+
 ## Метод ISODATA
 
 ![**Исходный набор данных** (Ball, Hall, 1965)](isodata-0.png){width=450px}
 
 Вес и рост спортсменов из разных видов спорта
 
+---
 
 ## Метод ISODATA
 
@@ -483,6 +219,7 @@ $$
 
 Даже если центры выбраны неудачно, в результате они разместятся в подходящих местах.
 
+---
 
 ## Метод ISODATA
 
@@ -491,12 +228,16 @@ $$
 
 **Разбиение диаграммой Вороного** 
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Распределение точек по кластерам** (Ball, Hall, 1965)](isodata-3.png){width=500px} -->
 <img src="isodata-3.png" width="450">
 
 **Распределение точек по кластерам**
+
+---
 
 ## Метод ISODATA
 
@@ -505,12 +246,16 @@ $$
 
 **Вычисление средней точки**
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Разделение центров** (Ball, Hall, 1965)](isodata-5.png){width=500px} -->
 <img src="isodata-5.png" width="450">
 
 **Разделение центров**
+
+---
 
 ## Метод ISODATA
 
@@ -519,12 +264,16 @@ $$
 
 **Разбиение диаграммой Вороного**
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Распределение точек по кластерам** (Ball, Hall, 1965)](isodata-7.png){width=500px} -->
 <img src="isodata-7.png" width="450">
 
 **Распределение точек по кластерам**
+
+---
 
 ## Метод ISODATA
 
@@ -533,6 +282,7 @@ $$
 
 **Центры кластеров** после итерации 2. Точка-выброс помечена стрелочкой
 
+---
 
 ## Метод ISODATA
 
@@ -541,6 +291,7 @@ $$
 
 **Центры кластеров** после итерации 3. Точка-выброс образовала самостоятельный кластер
 
+---
 
 ## Метод ISODATA
 
@@ -549,12 +300,16 @@ $$
 
 **Разбиение кластеров**
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Распределение точек по кластерам** (Ball, Hall, 1965)](isodata-11.png){width=500px} -->
 <img src="isodata-11.png" width="450">
 
 **Распределение точек по кластерам**
+
+---
 
 ## Метод ISODATA
 
@@ -563,12 +318,16 @@ $$
 
 **Вычисление новых центров кластеров**
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Слияние близких центров** (Ball, Hall, 1965)](isodata-13.png){width=500px} -->
 <img src="isodata-13.png" width="450">
 
 **Слияние близких центров**
+
+---
 
 ## Метод ISODATA
 
@@ -577,12 +336,16 @@ $$
 
 **Разбиение на кластеры**
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Центры кластеров** (Ball, Hall, 1965)](isodata-15.png){width=500px} -->
 <img src="isodata-15.png" width="450">
 
 **Центры кластеров**
+
+---
 
 ## Метод ISODATA
 
@@ -591,12 +354,16 @@ $$
 
 **Центры кластеров и их слияние**
 
+---
+
 ## Метод ISODATA
 
 <!-- ![**Итоговые центры** (Ball, Hall, 1965)](isodata-17.png){width=500px} -->
 <img src="isodata-17.png" width="450">
 
 **Итоговые центры**
+
+---
 
 ## Метод ISODATA
 
@@ -608,6 +375,7 @@ $$
 
 3. Точно так же хорошо справляется только с изометричными кластерами, однако по прежнему не эффективен при выделении кластеров неправильной формы
 
+---
 
 ## FOREL (ФОРмальные ЭЛементы)
 
@@ -628,6 +396,7 @@ $$
 
 **Ёлкина В.Н., Ёлкин Е.А., Загоруйко Н.Г.** *О применении методики распознавания образов к решению задач палеонтологии*, 1967
 
+---
 
 ## FOREL (ФОРмальные ЭЛементы)
 
@@ -640,6 +409,8 @@ $$
 - Возможность подсчета промежуточных функционалов качества, например, длины цепочки локальных сгущений
 - Возможность проверки гипотез схожести и компактности в процессе работы алгоритма
 
+---
+
 ## FOREL (ФОРмальные ЭЛементы)
 
 **Недостатки: **
@@ -650,6 +421,7 @@ $$
 - Произвольное по количеству разбиение на кластеры
 - Необходимость априорных знаний о ширине (диаметре) кластеров
 
+---
 
 ## Иерархическая кластеризация
 
@@ -665,6 +437,8 @@ $$
 
 (5). Объединить их в один кластер: $W := U \cup V$; $C_t := C_{t-1} \{W\} \setminus \{U, V\}$.
 
+---
+
 ## Иерархическая кластеризация
 
 (6). Пересчитать расстояния $R_{WS}$ от нового кластера $W$ до всех кластеров $S \in С_t$ по формуле Ланса-Уильямса: $R_{WS} := \alpha_{U}R_{US} + \alpha_V R_{VS} + \beta R_{UV} + \gamma |R_{US} - R_{VS}|$.
@@ -675,12 +449,15 @@ $$
 
 **Lance G. N., Willams W. T.** *A general theory of classification sorting strategies. 1. hierarchical systems* // Comp. J. — 1967. — no. 9. — Pp. 373–380
 
+---
+
 ## Варианты расстояний
 <!-- ![](hierch-dist1.png){width=900px} -->
 <img src="hierch-dist1.png" width="700">
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Варианты расстояний
 <!-- ![](hierch-dist2.png){width=900px} -->
@@ -688,6 +465,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Дендрограммы
 
@@ -698,6 +476,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Дендрограммы
 
@@ -708,6 +487,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Дендрограммы
 
@@ -718,6 +498,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Дендрограммы
 
@@ -728,6 +509,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Иерархическая кластеризация
 
@@ -742,6 +524,7 @@ $$
 
 **К.В.Воронцов** Машинное обучение (курс лекций). [http://www.machinelearning.ru](http://www.machinelearning.ru)
 
+---
 
 ## Кратчайший незамкнутый путь
 
@@ -759,6 +542,7 @@ $$
 - необходимость задавать число кластеров
 - высокая чувствительность к шуму.
 
+---
 
 ## DBSCAN
 
@@ -771,7 +555,7 @@ $$
   3. Точка $r$ является *выброшенной (outlier)*, если оне не достижима ни от одной другой точки
 
 <!-- </div> -->
-
+---
 <!-- <div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%"> -->
 ## DBSCAN
 
@@ -784,7 +568,8 @@ $$
 **Ester, Martin, Hans P Kriegel, Jorg Sander, and Xiaowei Xu**. 1996. *A Density-Based Algorithm for Discovering Clusters in Large Spatial Databases with Noise.* Proceedings of the 2nd International Conference on Knowledge Discovery and Data Mining, 226–31. doi:10.1.1.71.1980.
 
 ---
-<!-- ## DBSCAN -->
+
+## DBSCAN
 
 <!-- **Алгоритм:** -->
 
@@ -804,6 +589,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 **Ester, Martin, Hans P Kriegel, Jorg Sander, and Xiaowei Xu**. 1996. *A Density-Based Algorithm for Discovering Clusters in Large Spatial Databases with Noise.* Proceedings of the 2nd International Conference on Knowledge Discovery and Data Mining, 226–31. doi:10.1.1.71.1980.
 
+---
 
 ## DBSCAN
 
@@ -817,6 +603,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 [https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/](https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/)
 
+---
 
 ## DBSCAN
 
@@ -829,6 +616,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 [https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/](https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/)
 
+---
 
 ## DBSCAN
 
@@ -841,6 +629,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 [https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/](https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/)
 
+---
 
 ## DBSCAN
 
@@ -861,6 +650,7 @@ i. Для каждой точки $q$ из множества $Q$:
 <!-- </div> -->
 
 <!-- <div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%"> -->
+---
 
 ## DBSCAN
 
@@ -874,6 +664,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 <!-- </div> -->
 
+---
 
 ## DBSCAN
 
@@ -886,6 +677,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 **Sander, Jörg; Ester, Martin; Kriegel, Hans-Peter; Xu, Xiaowei** 1998. "Density-Based Clustering in Spatial Databases: The Algorithm GDBSCAN and Its Applications". Data Mining and Knowledge Discovery. Berlin: Springer-Verlag. 2 (2): 169–194. doi:10.1023/A:1009745219419
 
+---
 
 ## DBSCAN
 
@@ -897,14 +689,15 @@ i. Для каждой точки $q$ из множества $Q$:
 
 **Sander, Jörg; Ester, Martin; Kriegel, Hans-Peter; Xu, Xiaowei** 1998. "Density-Based Clustering in Spatial Databases: The Algorithm GDBSCAN and Its Applications". Data Mining and Knowledge Discovery. Berlin: Springer-Verlag. 2 (2): 169–194. doi:10.1023/A:1009745219419
 
+---
 
-<!-- ## OPTICS -->
+## OPTICS
 
-<!-- OPTICS является модификацией алгоритма DBSCAN, который решает одну из его основных проблем  невозможность выделять кластеры различной плотности. Точки линейно упорядочиваются таким образом, что близкие друг другу точки становятся соседями в последовательности: -->
+OPTICS является модификацией алгоритма DBSCAN, который решает одну из его основных проблем  невозможность выделять кластеры различной плотности. Точки линейно упорядочиваются таким образом, что близкие друг другу точки становятся соседями в последовательности:
 
-<!-- <img src="OPTICS.svg" width="700"> -->
-<!-- <!-- ![](OPTICS.svg){width=800px} --> -->
+<img src="OPTICS.svg" width="700">
 
+---
 
 ## Вычисление центров кластеров
 
@@ -912,8 +705,7 @@ i. Для каждой точки $q$ из множества $Q$:
 
 <img src="cluster_centers.png" width="500">
 
-<!-- ![](cluster_centers.png){width=500px} -->
-
+---
 
 ## Критерии качества кластеризации:
 
@@ -929,165 +721,17 @@ $$
 F_1 = \frac{\sum_{i < j} [a_i \neq a_j] \rho(x_i, x_j)}{\sum_{i < j} [a_i \neq a_j]} \rightarrow max
 $$
 
-<!-- где $[\cdot]$  индикаторная функция в нотации Айверсона: -->
+где $[\cdot]$  индикаторная функция в нотации Айверсона:
 
-<!-- $$ -->
-<!-- [P] = \begin{cases} -->
-<!--   1, \text{if } P \text{ is TRUE};\\ -->
-<!--   0, \text{if } P \text{ is FALSE}. -->
-<!-- \end{cases} -->
-<!-- $$ -->
+$$
+[P] = \begin{cases}
+  1, \text{if } P \text{ is TRUE};\\
+  0, \text{if } P \text{ is FALSE}.
+\end{cases}
+$$
 
 **Отношение пары функционалов**:
 
 $$
 F_0/F_1 \rightarrow min
 $$
-
-## Регионизация точек
-
-**Методы регионизации:**
-
-1. Ограничивающие прямоугольники
-2. Выпуклая оболочка
-3. Невыпуклые оболочки ($\alpha$-shape, $\chi$-shape)
-
-
-
-## Ограничивающий прямоугольник (envelope)
-
-<img src="envelope.png" width="800">
-<!-- ![](envelope.png){width=800px} -->
-
-- Наиболее простой тип оболочки, который используется в ГИС для описания территориального охвата слоя (*экстент*)
-
-- Для построения в общем случае нужно 4 точки, которые обладают минимальным и максимальным значением координат из всего множества
-
-
-
-## Выпуклая оболочка (convex hull)
-
-<img src="chull.png" width="400">
-<!-- ![](chull.png){width=400px} -->
-
-- **Выпуклой оболочкой** множества $p$ называется
-наименьшее выпуклое множество, содержащее $p$
-
-- Выпуклая оболочка обозначается как $Conv(p)$
-
-- Выпуклая оболочка на плоскости является *пересечением всех полуплоскостей, содержащих* $p$
-
-- Существует несколько алгоритмов построения $Conv(p)$
-
-
-
-## Выпуклая оболочка
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  **Аналогия**
-
-  Представьте себе лассо, которое накидывается на множество гвоздей, битых в доску:
-  ![](lasso.png){width=330px}
-  
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  **Выпуклое и невыпуклое**
-
-  *Выпуклое множество* в аффинном или векторном пространстве — множество, содержащее вместе с любыми двумя точками соединяющий их отрезок:
-  
-  <img src="convex_concave.png" width="400">
-  <!-- ![](convex_concave.png) -->
-</div>
-
-
-
-## Выпуклая оболочка
-
-**Алгоритм Джарвиса**
-
-<div style="display: inline-block; width: 55%; vertical-align: top;">
-
-  1. Найти точку $p_0$ с наименьшим значением координаты $X$. Добавить в результат.
-  2. Найти точку $p_1$, образующую наименьший угол поворота по часовой стрелке относительно направления оси $Y$. Добавить в результат.
-  3. Найти все оставшиеся точки выпуклой оболочки $p_i, i = 2..k$, выбирая каждый раз такую точку $p_i$, что угол поворота от $p_{i-2} p_{i-1}$ к $p_{i-2} p_{i-1}$ наименьший. Остановиться, когда $p_i = p_0$
-
-</div>
-
-<div style="display: inline-block; width: 40%; vertical-align: top; margin-left: 2%">
-  ![](jarvis.png)
-</div>
-
-**Jarvis, R. A.** (1973). *On the identification of the convex hull of a finite set of points in the plane*. Information Processing Letters 2: 18–21. doi:10.1016/0020-0190(73)90020-3.
-
-## Выпуклая оболочка
-
-**Алгоритм Джарвиса**
-
-![](jarvis.gif)
-
-**Jarvis, R. A.** (1973). *On the identification of the convex hull of a finite set of points in the plane*. Information Processing Letters 2: 18–21. doi:10.1016/0020-0190(73)90020-3.
-
-
-## Минимальный по площади ограничивающий прямоугольник
-
-**Минимальный по площади ограничивающий прямоугольник** (*minimum bounding rectangle  MBR*) является наименьшим по площади среди всех прямоугольников, охватывающих данное множество точек
-
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  ![](mbr.png)
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  Согласно теореме Фримана-Шапиро *одна из сторон MBR должна касаться выпуклой оболочки*.
-
-  **Freeman, H.; Shapira, R.** (1975), *Determining the minimum-area encasing rectangle for an arbitrary closed curve*. Communications of the ACM, 18: 409–413, MR 0375828, doi:10.1145/360881.360919.
-</div>
-
-
-
-
-## Алгоритм Rotating Calipers
-
-Поворачиваем ограничивающий прямоугольник, совмещая его с одной из сторон выпуклой оболочки. Из них выбираем минимальный по площади.
-
-![](calipers.png){width=700px}
-
-**G.T.Toussaint** (1983). *Solving geometric problems with the rotating calipers*. Proceedings of IEEE MELECON'83, Athens, Greece, May 1983, pp. A10. 02/1-4.
-
-
-
-## Альфа-оболочка
-
-**Альфа-оболочка ($\alpha$-shape)**  обобщение понятия выпуклой оболочки, позволяющее строить оболочки, более точно описывающие форму множества, в том числе и вогнутые оболочки. Альфа-оболочка является площадной компонентой *альфа-комплекса ($\alpha$-complex)*, который строится на основе триангуляции Делоне множества точек.
-
-![](ashape.png){width=600px}
-
-**Edelsbrunner H, Kirkpatrick D, Seidel R **(1983) *On the shape of a set of points in the plane*. IEEE Transactions on Information Theory, 29:551–559. doi: 10.1109/TIT.1983.1056714
-
-## Альфа-комплекс
-
-**Альфа-комплекс ($\alpha$-complex)**  подмножество триангуляции Делоне, включающее узлы, а также ребра и треугольники, существующие при заданном радиусе диска $r= 1/\alpha$ (при $\alpha > 0$).
-
-![](acomplex.png){width=900px}
-
-- При увеличении радиуса диска происходит образование и исчезновение циклов.
-
-- При $\alpha = 0$ объединение треугольников альфа-комплекса совпадает с *выпуклой оболочкой* множества точек.
-
-
-
-## Типы альфа-комплексов
-<div style="display: inline-block; width: 45%; vertical-align: top;">
-  **Стандартный**
-
-  $\alpha = const$
-
-  ![](acomplex_std.png)
-</div>
-
-<div style="display: inline-block; width: 45%; vertical-align: top; margin-left: 2%">
-  **Взвешенный**
-
-  $\alpha = f(p)$
-
-  ![](acomplex_wgt.png)
-</div>
